--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,7 @@
 
 /*** Carousel Hero Header Start ***/
 .hero-section {
-    background-image: url(../img/carousel-1.jpg);
+    background-image: url(../img/bd.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -395,7 +395,7 @@
 }
 
 .hero-bg-half-1 {
-    background-image: url(../img/header-2.jpg);
+    background-image: url(../img/header-2.png);
     clip-path: polygon(37% 0%, 100% 0%, 100% 100%, 0% 100%);
     filter: grayscale(10%);
     transform: scale(100% - 50%);
