--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,7 @@
 
 /*** Carousel Hero Header Start ***/
 .hero-section {
-    background-image: url(../img/bd.png);
+    background-image: url(../img/5.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
